# zoo-pixel

./: .gitignore  Cargo.toml  loquehay  zoo_save.json
assets/: zoo_save.json
src/: animacion.rs  audio.rs  ciclo_dia.rs  config.rs  db.rs  escena.rs  estado.rs  eventos.rs  fondo.rs  guia.rs  input.rs  libreta.rs  main.rs  minijuego.rs  plataforma.rs  save.rs  ui.rs
