[package]
name = "zoopixel"
version = "0.4.0"
edition = "2021"

[dependencies]
macroquad = { version = "0.4", features = ["audio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }

[profile.dev.package."*"]
opt-level = 3

[package.metadata.android]
package_name = "com.tuusuario.zoopixel"
label = "Zoo Pixel"
assets = "assets/"
fullscreen = true
android_version = 29
target_sdk_version = 29
min_sdk_version = 26
build_targets = ["aarch64-linux-android"]
# res = "android_res"
# icon = "@mipmap/ic_launcher"

[package.metadata.android.activity_attributes]
"android:exported" = "true"
"android:screenOrientation" = "userLandscape"